crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_callees_out_of_gas_is_caught_as_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "a 16 MiB memory expansion, gas limit 100000000, detained": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a 16 MiB memory expansion, gas limit 100000000, plain": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a 16 MiB memory expansion, gas limit 300000000, detained": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "a 16 MiB memory expansion, gas limit 300000000, plain": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "a copy of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a copy of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a copy of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "a copy of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "a hash of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a hash of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "a hash of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "a hash of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "an operand above usize, gas limit 100000000, detained": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "an operand above usize, gas limit 100000000, plain": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6; view 0x78f0fb537ba04b418fbb5b215b45a5cab78e3132ad3d0a3789a4dda12e9bf53d",
  "an operand above usize, gas limit 300000000, detained": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057",
  "an operand above usize, gas limit 300000000, plain": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6; view 0x38eb1dda5c7eb7bf34d2d480cb66facfa42ed93acd2d97ddc798916fb091e057"
}
