crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_creation_that_cannot_pay_its_deposit_halts_as_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "a creation that cannot pay its deposit, detained": {
    "result": {
      "kind": "halt",
      "reason": "Base(OutOfGas(Basic))",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 99971576,
      "state": 0,
      "history": 28424,
      "history_bytes": 323,
      "reservoir_remaining": 0,
      "floor": 24832,
      "gas_used": 100000000
    },
    "result_gas": {
      "total_gas_spent": 100000000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24832,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 323,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a creation that cannot pay its deposit, plain": {
    "result": {
      "kind": "halt",
      "reason": "Base(OutOfGas(Basic))",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 99971576,
      "state": 0,
      "history": 28424,
      "history_bytes": 323,
      "reservoir_remaining": 0,
      "floor": 24832,
      "gas_used": 100000000
    },
    "result_gas": {
      "total_gas_spent": 100000000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24832,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 323,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
