crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_halt_on_a_static_charge_counts_what_its_frame_had_as_compute.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "under a cap of 200,000, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 200002); stop ComputeGas limit 200002 used 202182; regular 217182 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 244462; data_size 310 write_records 0; logs 0 accounts 5; view 0x5d0119a72772edee7b9fe3c1c1e4871c26d5eb19277ffa66370ac8ac003f3fca",
  "under a cap of 200,000, gas limit 100000000, plain": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x638943127bceeb90eb1650fb4af75d0c569376df65db129a2a8cd96f054f0ceb",
  "under a cap of 200,000, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 200002); stop ComputeGas limit 200002 used 202182; regular 217182 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 244462; data_size 310 write_records 0; logs 0 accounts 5; view 0x554e367e492d278e40cf628e89cce1e286418870db785494b2918f3f4d2ebaae",
  "under a cap of 200,000, gas limit 300000000, plain": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x588642d3fdab5df7a26715d53a1f352b97706b997faabcf178404f56802b236e",
  "under a cap of 300,000, gas limit 100000000, detained": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x638943127bceeb90eb1650fb4af75d0c569376df65db129a2a8cd96f054f0ceb",
  "under a cap of 300,000, gas limit 100000000, plain": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x638943127bceeb90eb1650fb4af75d0c569376df65db129a2a8cd96f054f0ceb",
  "under a cap of 300,000, gas limit 300000000, detained": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x588642d3fdab5df7a26715d53a1f352b97706b997faabcf178404f56802b236e",
  "under a cap of 300,000, gas limit 300000000, plain": "success Stop; stop -; regular 273504 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 300784; data_size 310 write_records 0; logs 0 accounts 6; view 0x588642d3fdab5df7a26715d53a1f352b97706b997faabcf178404f56802b236e"
}
