crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_keyless_calls_charges_are_held_to_what_the_limit_leaves.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "deployed from another sender under the spec's cap, inspected, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 8; view 0xb6adc99e18f3bf71f7ae2f93efe8110cb151d167c3ef4451d67e491e89d0a171",
  "deployed from another sender under the spec's cap, inspected, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 8; view 0x5d653681baf59a8b3e02231003c1d2a9ee31439135c74c1ff4871f0f85f230cf",
  "deployed from another sender under the spec's cap, plain, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 8; view 0xb6adc99e18f3bf71f7ae2f93efe8110cb151d167c3ef4451d67e491e89d0a171",
  "deployed from another sender under the spec's cap, plain, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 8; view 0x5d653681baf59a8b3e02231003c1d2a9ee31439135c74c1ff4871f0f85f230cf",
  "deployed from the beneficiary at the creation's compute, inspected, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0xdb23633b969faa9e85ce3179dc3b292a84e7abcd8fda696309508af287f5dca8",
  "deployed from the beneficiary at the creation's compute, inspected, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0x90c3904c061b3bb88f20d7e26a66d707cc5b24ffd06cbe565d7a719793aa3ceb",
  "deployed from the beneficiary at the creation's compute, plain, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0xdb23633b969faa9e85ce3179dc3b292a84e7abcd8fda696309508af287f5dca8",
  "deployed from the beneficiary at the creation's compute, plain, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0x90c3904c061b3bb88f20d7e26a66d707cc5b24ffd06cbe565d7a719793aa3ceb",
  "deployed from the beneficiary one short of the creation, inspected, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 132062); stop ComputeGas limit 132062 used 132045; regular 150337 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 203313; data_size 602 write_records 0; logs 0 accounts 4; view 0x0b29a83e523fb4f89bf7138549c109fc78f8ef9d129c2a838a23e8440e2f9de4",
  "deployed from the beneficiary one short of the creation, inspected, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 132062); stop ComputeGas limit 132062 used 132045; regular 150337 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 203313; data_size 602 write_records 0; logs 0 accounts 4; view 0x61fcf6b9805a54393c350bc02cc985fa63a874873b7f27faaa018e63f992cc8c",
  "deployed from the beneficiary one short of the creation, plain, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 132062); stop ComputeGas limit 132062 used 132045; regular 150337 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 203313; data_size 602 write_records 0; logs 0 accounts 4; view 0x0b29a83e523fb4f89bf7138549c109fc78f8ef9d129c2a838a23e8440e2f9de4",
  "deployed from the beneficiary one short of the creation, plain, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 132062); stop ComputeGas limit 132062 used 132045; regular 150337 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 203313; data_size 602 write_records 0; logs 0 accounts 4; view 0x61fcf6b9805a54393c350bc02cc985fa63a874873b7f27faaa018e63f992cc8c",
  "deployed from the beneficiary one short of the overhead and the CREATE opcode, inspected, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 132005); stop ComputeGas limit 132005 used 100000; regular 118292 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 171268; data_size 602 write_records 0; logs 0 accounts 4; view 0x43946018905bc78d079b56525da65126582271efdb68bbfc3818fda8e7e655fe",
  "deployed from the beneficiary one short of the overhead and the CREATE opcode, inspected, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 132005); stop ComputeGas limit 132005 used 100000; regular 118292 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 171268; data_size 602 write_records 0; logs 0 accounts 4; view 0xbd108e975379a64a3129b7cbd2fef41f270b3687db1ab3919d85e51c63863849",
  "deployed from the beneficiary one short of the overhead and the CREATE opcode, plain, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 132005); stop ComputeGas limit 132005 used 100000; regular 118292 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 171268; data_size 602 write_records 0; logs 0 accounts 4; view 0x43946018905bc78d079b56525da65126582271efdb68bbfc3818fda8e7e655fe",
  "deployed from the beneficiary one short of the overhead and the CREATE opcode, plain, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 132005); stop ComputeGas limit 132005 used 100000; regular 118292 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 171268; data_size 602 write_records 0; logs 0 accounts 4; view 0xbd108e975379a64a3129b7cbd2fef41f270b3687db1ab3919d85e51c63863849",
  "deployed from the beneficiary under half the overhead, inspected, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 18292 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 71268; data_size 602 write_records 0; logs 0 accounts 4; view 0x6588099cb1ee9699fdfd458522c3584fa73f03ff9c743ccf6010355832010dc9",
  "deployed from the beneficiary under half the overhead, inspected, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 18292 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 71268; data_size 602 write_records 0; logs 0 accounts 4; view 0xb9bf8ef8821572d82f14171a06abb3944930922ea4f66c684091d7ffbd3c854c",
  "deployed from the beneficiary under half the overhead, plain, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 18292 state 0 history 52976 history_bytes 602 reservoir_remaining 0 floor 33688 gas_used 71268; data_size 602 write_records 0; logs 0 accounts 4; view 0x6588099cb1ee9699fdfd458522c3584fa73f03ff9c743ccf6010355832010dc9",
  "deployed from the beneficiary under half the overhead, plain, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 18292 state 0 history 52976 history_bytes 602 reservoir_remaining 99947024 floor 33688 gas_used 71268; data_size 602 write_records 0; logs 0 accounts 4; view 0xb9bf8ef8821572d82f14171a06abb3944930922ea4f66c684091d7ffbd3c854c",
  "deployed from the beneficiary under the spec's cap, inspected, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0xdb23633b969faa9e85ce3179dc3b292a84e7abcd8fda696309508af287f5dca8",
  "deployed from the beneficiary under the spec's cap, inspected, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0x90c3904c061b3bb88f20d7e26a66d707cc5b24ffd06cbe565d7a719793aa3ceb",
  "deployed from the beneficiary under the spec's cap, plain, gas limit 100000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 0 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0xdb23633b969faa9e85ce3179dc3b292a84e7abcd8fda696309508af287f5dca8",
  "deployed from the beneficiary under the spec's cap, plain, gas limit 300000000": "success Return; stop -; regular 150355 state 472770 history 66088 history_bytes 751 reservoir_remaining 99461142 floor 33688 gas_used 689213; data_size 751 write_records 2; logs 0 accounts 7; view 0x90c3904c061b3bb88f20d7e26a66d707cc5b24ffd06cbe565d7a719793aa3ceb",
  "refused from another sender under the spec's cap, inspected, gas limit 100000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 5; view 0x9924c15b987744313d9ca74ddb85b249291bffabff7c997f593159b2fc5fed5e",
  "refused from another sender under the spec's cap, inspected, gas limit 300000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 5; view 0xa786577293b84c852eec51e71427ffc1e18a572580f2d7a025a96d7a0fe5f86e",
  "refused from another sender under the spec's cap, plain, gas limit 100000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 5; view 0x9924c15b987744313d9ca74ddb85b249291bffabff7c997f593159b2fc5fed5e",
  "refused from another sender under the spec's cap, plain, gas limit 300000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 5; view 0xa786577293b84c852eec51e71427ffc1e18a572580f2d7a025a96d7a0fe5f86e",
  "refused from the beneficiary one short of the overhead and the CREATE opcode, inspected, gas limit 100000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 4; view 0x73a67213833751c943edd6d62022e9d0d7435c9675dfc6d79e443b352f3a75f8",
  "refused from the beneficiary one short of the overhead and the CREATE opcode, inspected, gas limit 300000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 4; view 0xb3b8e2af2ef129239d003a5d5f34396256b33c8c8610e1516f12d5a0b124f9a4",
  "refused from the beneficiary one short of the overhead and the CREATE opcode, plain, gas limit 100000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 4; view 0x73a67213833751c943edd6d62022e9d0d7435c9675dfc6d79e443b352f3a75f8",
  "refused from the beneficiary one short of the overhead and the CREATE opcode, plain, gas limit 300000000": "revert -; stop -; regular 121852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 160748; data_size 442 write_records 0; logs 0 accounts 4; view 0xb3b8e2af2ef129239d003a5d5f34396256b33c8c8610e1516f12d5a0b124f9a4",
  "refused from the beneficiary under half the overhead, inspected, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 21852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 60748; data_size 442 write_records 0; logs 0 accounts 4; view 0x077b7201dced016589e40e4ac68043464870154d9a545a5ce2220cd08154bbd4",
  "refused from the beneficiary under half the overhead, inspected, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 21852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 60748; data_size 442 write_records 0; logs 0 accounts 4; view 0x94f157bcd861e76c5cde05ad65a027a9dd5f10c8b7a22c2a5c2a8507a657a0d1",
  "refused from the beneficiary under half the overhead, plain, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 21852 state 0 history 38896 history_bytes 442 reservoir_remaining 0 floor 29448 gas_used 60748; data_size 442 write_records 0; logs 0 accounts 4; view 0x077b7201dced016589e40e4ac68043464870154d9a545a5ce2220cd08154bbd4",
  "refused from the beneficiary under half the overhead, plain, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 50000); stop ComputeGas limit 50000 used 0; regular 21852 state 0 history 38896 history_bytes 442 reservoir_remaining 99961104 floor 29448 gas_used 60748; data_size 442 write_records 0; logs 0 accounts 4; view 0x94f157bcd861e76c5cde05ad65a027a9dd5f10c8b7a22c2a5c2a8507a657a0d1"
}
