crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_nodes_own_precompile_keeps_the_clamp_a_priced_wrapper_does_not.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "a node's own precompile, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 100002); stop ComputeGas limit 100002 used 133; regular 15297 state 0 history 30096 history_bytes 342 reservoir_remaining 0 floor 17048 gas_used 45393; data_size 342 write_records 0; logs 0 accounts 5; view 0xe684a19705bf5a37da601dfd1b6169081ac1aa190a63ce7e8473dfa8724b3622",
  "a node's own precompile, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 100002); stop ComputeGas limit 100002 used 133; regular 15297 state 0 history 30096 history_bytes 342 reservoir_remaining 99969904 floor 17048 gas_used 45393; data_size 342 write_records 0; logs 0 accounts 5; view 0x34856fbf68d1f8358417e22a6655fc2a740c64c2a7f695b475d3328852b02d75",
  "the BN254 pairing, gas limit 100000000, detained": "success Stop; stop -; regular 139742 state 0 history 77968 history_bytes 886 reservoir_remaining 0 floor 51864 gas_used 217710; data_size 886 write_records 0; logs 0 accounts 6; view 0x1f3e6b4984e20e2009cceed7c97e254e3e516f9c62f33e6f6bbca17a43f15778",
  "the BN254 pairing, gas limit 100000000, plain": "success Stop; stop -; regular 139742 state 0 history 77968 history_bytes 886 reservoir_remaining 0 floor 51864 gas_used 217710; data_size 886 write_records 0; logs 0 accounts 6; view 0x1f3e6b4984e20e2009cceed7c97e254e3e516f9c62f33e6f6bbca17a43f15778",
  "the BN254 pairing, gas limit 300000000, detained": "success Stop; stop -; regular 139742 state 0 history 77968 history_bytes 886 reservoir_remaining 99922032 floor 51864 gas_used 217710; data_size 886 write_records 0; logs 0 accounts 6; view 0xb3a249bb100374a1f9b0fd3b4866822a58266dd27b5f04b7d8f75ea8d6a31dfd",
  "the BN254 pairing, gas limit 300000000, plain": "success Stop; stop -; regular 139742 state 0 history 77968 history_bytes 886 reservoir_remaining 99922032 floor 51864 gas_used 217710; data_size 886 write_records 0; logs 0 accounts 6; view 0xb3a249bb100374a1f9b0fd3b4866822a58266dd27b5f04b7d8f75ea8d6a31dfd",
  "the KZG point evaluation, gas limit 100000000, detained": "success Stop; stop -; regular 98134 state 0 history 44176 history_bytes 502 reservoir_remaining 0 floor 27288 gas_used 142310; data_size 502 write_records 0; logs 0 accounts 6; view 0xd5b917f347dab329762c62f50bb5a2d37e7fd2aa81f7786c7db2dc73c795a1b6",
  "the KZG point evaluation, gas limit 100000000, plain": "success Stop; stop -; regular 98134 state 0 history 44176 history_bytes 502 reservoir_remaining 0 floor 27288 gas_used 142310; data_size 502 write_records 0; logs 0 accounts 6; view 0xd5b917f347dab329762c62f50bb5a2d37e7fd2aa81f7786c7db2dc73c795a1b6",
  "the KZG point evaluation, gas limit 300000000, detained": "success Stop; stop -; regular 98134 state 0 history 44176 history_bytes 502 reservoir_remaining 99955824 floor 27288 gas_used 142310; data_size 502 write_records 0; logs 0 accounts 6; view 0x2b743911154cfc34a6b6833a10191618f138380e6da11ad7ae68dfc632ea995e",
  "the KZG point evaluation, gas limit 300000000, plain": "success Stop; stop -; regular 98134 state 0 history 44176 history_bytes 502 reservoir_remaining 99955824 floor 27288 gas_used 142310; data_size 502 write_records 0; logs 0 accounts 6; view 0x2b743911154cfc34a6b6833a10191618f138380e6da11ad7ae68dfc632ea995e"
}
