crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_precompile_is_held_to_what_the_limit_leaves.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "forwarded short of its price past the allowance, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 357; regular 33201 state 0 history 131560 history_bytes 1495 reservoir_remaining 0 floor 90840 gas_used 164761; data_size 1495 write_records 0; logs 0 accounts 5; view 0xb457a63b00f48b58ef76f5abc51b3a002c31698cffe2cd7ed22a0dac01d7e2f0",
  "forwarded short of its price past the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 25168459 state 0 history 131560 history_bytes 1495 reservoir_remaining 0 floor 90840 gas_used 25300019; data_size 1495 write_records 0; logs 0 accounts 6; view 0x5976e8eba629715959337e60333a6419e6fc4d89e6817fee3508e55eb963c754",
  "forwarded short of its price past the allowance, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 357; regular 33201 state 0 history 131560 history_bytes 1495 reservoir_remaining 99868440 floor 90840 gas_used 164761; data_size 1495 write_records 0; logs 0 accounts 5; view 0xaa5a47ef1f801e408313d47c32b8e24b9b23b8c52278ec5fa5a45de040ba94e5",
  "forwarded short of its price past the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 25168459 state 0 history 131560 history_bytes 1495 reservoir_remaining 99868440 floor 90840 gas_used 25300019; data_size 1495 write_records 0; logs 0 accounts 6; view 0x0fb05b7ce7d859f8de35c73ccf4f7e915ab81e18a4e33253a3839f2ef8f18597",
  "forwarded short of its price within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 8390859 state 0 history 131560 history_bytes 1495 reservoir_remaining 0 floor 90840 gas_used 8522419; data_size 1495 write_records 0; logs 0 accounts 6; view 0xca63017cd5ecfdf7f9d89c11e78386121988592207ddefe40bbedc0df5f26749",
  "forwarded short of its price within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 8390859 state 0 history 131560 history_bytes 1495 reservoir_remaining 0 floor 90840 gas_used 8522419; data_size 1495 write_records 0; logs 0 accounts 6; view 0xca63017cd5ecfdf7f9d89c11e78386121988592207ddefe40bbedc0df5f26749",
  "forwarded short of its price within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 8390859 state 0 history 131560 history_bytes 1495 reservoir_remaining 99868440 floor 90840 gas_used 8522419; data_size 1495 write_records 0; logs 0 accounts 6; view 0xb8eedd471325229997b3a5f1ac7fb3ed31c92188e633175490c28bbd1dceeae4",
  "forwarded short of its price within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 8390859 state 0 history 131560 history_bytes 1495 reservoir_remaining 99868440 floor 90840 gas_used 8522419; data_size 1495 write_records 0; logs 0 accounts 6; view 0xb8eedd471325229997b3a5f1ac7fb3ed31c92188e633175490c28bbd1dceeae4",
  "priced past the allowance, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 356; regular 33200 state 0 history 131560 history_bytes 1495 reservoir_remaining 0 floor 90840 gas_used 164760; data_size 1495 write_records 0; logs 0 accounts 5; view 0x0f34b8a96b73c1319acddbb5192d248d2fb3bc5f3e6c2f353e15484b52f933ce",
  "priced past the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 25188359 state 97920 history 135080 history_bytes 1535 reservoir_remaining 0 floor 90840 gas_used 25421359; data_size 1535 write_records 1; logs 0 accounts 7; view 0xf1fcce1776615acb842b9ec6374157fc7b10c6cafa332944e14ab1e1f9154931",
  "priced past the allowance, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 356; regular 33200 state 0 history 131560 history_bytes 1495 reservoir_remaining 99868440 floor 90840 gas_used 164760; data_size 1495 write_records 0; logs 0 accounts 5; view 0xc281ed4b7e0f5ebade36c6d1d635933a64511c9f5355544bdc40969fa8626858",
  "priced past the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 25188359 state 97920 history 135080 history_bytes 1535 reservoir_remaining 99767000 floor 90840 gas_used 25421359; data_size 1535 write_records 1; logs 0 accounts 7; view 0x1856469886b7a12b9dc5ca1528739b12b738c677959189223f6aef3b322a7410",
  "priced within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 8410759 state 97920 history 135080 history_bytes 1535 reservoir_remaining 0 floor 90840 gas_used 8643759; data_size 1535 write_records 1; logs 0 accounts 7; view 0x19c40f85f392f85b2ebfef52f78a96fb2c1d34a8ff1d3f0ed7e5d30a27aa5377",
  "priced within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 8410759 state 97920 history 135080 history_bytes 1535 reservoir_remaining 0 floor 90840 gas_used 8643759; data_size 1535 write_records 1; logs 0 accounts 7; view 0xe620cf84990e5430bf100837dba3757d072cb278b79e61894fbeb62f3771335a",
  "priced within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 8410759 state 97920 history 135080 history_bytes 1535 reservoir_remaining 99767000 floor 90840 gas_used 8643759; data_size 1535 write_records 1; logs 0 accounts 7; view 0x5834bb90778235a7a184eba098d888d3df799ff05368e7624d578c3e8e126c74",
  "priced within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 8410759 state 97920 history 135080 history_bytes 1535 reservoir_remaining 99767000 floor 90840 gas_used 8643759; data_size 1535 write_records 1; logs 0 accounts 7; view 0x92149bc93632e2cb4ea36a3cdc5a1122d65a66f0d02ff4db82290ea5376eb998"
}
